tests/macros/expand/extension.stderr
error: option `extension` does not exist for kind `expand`
 --> $DIR/extension.rs:2:44
  |
2 |     let q = requestty::questions![Expand { extension: todo!() }];
  |                                            ^^^^^^^^^
