tests/macros/expand/extension.rs
fn main() {
    let q = requestty::questions![Expand { extension: todo!() }];
}
